fixed hero gradient overflow with .parent set to position relative

--- a/index.css
+++ b/index.css
@@ -2,15 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Work Sans,sans-serif;
+    font-family: 'Work Sans',sans-serif;
 }
 
-.parent {
+body, html {
+    width: 100%;
     overflow-x: hidden;
 }
 
+.parent {
+    position: relative;
+}
+
 a {
-    font-weight: 800;
+    font-weight: 700;
     letter-spacing: -.5px;
     text-decoration: none;
     color: #71229c;
@@ -72,10 +77,20 @@ p {
     border: 2px solid #71229c;
 }
 
+.home-hero-gradient {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 1550px;
+    height: 850px;
+    background: linear-gradient(90deg,white,#faeafa 20%,#f9eafa 50%,#faeafa 80%,white);
+    transform: translateX(-50%);
+    z-index: -2;
+}
+
 .hero {
     width: 100%;
     height: 850px;
-    background: -webkit-linear-gradient(250deg,#ad5389, #3c1053);
     opacity: .75;
 }
 
